Header alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -102,7 +102,7 @@ body {
 .header-main .header-main-right h2 {
   color: @font-swatch6-color;
   font-size: 17px;
-  padding: 5px 0 0;
+  padding: 0;
 }
 
 .header-main .header-main-right .widget.button {
